# Kanta-AI

./: .gitignore  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/schemas/: commit.py  meeting.py
app/services/: commit_matcher.py  meeting_extractor.py  openai_client.py
tests/: test_api.py
